# py-starter

./: LICENSE  README.md  pyproject.toml
core/: math.py
test/: test_math.py
